# pico-rgbi-to-vga

./: .gitignore  README.md  fp-info-cache  fp-lib-table  pico-rgbi-to-vga.kicad_pcb  pico-rgbi-to-vga.kicad_prl  pico-rgbi-to-vga.kicad_pro  pico-rgbi-to-vga.kicad_sch  sym-lib-table
CUI_SDS_80J.pretty/: CUI_SDS-80J.kicad_mod
captures/pc6001mkII-dec-12-2024/: colour checkerboard capture.pvs  colour checkerboard capture.sr  full height colour capture.sr  setup screen capture.pvs  setup screen capture.sr
firmware/: .gitignore  CMakeLists.txt  README.md
firmware/src/: include.h  main.cpp  main.h  render.cpp  vga_config.h
